Headers in html

--- a/headers.html
+++ b/headers.html
@@ -6,7 +6,34 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> Welcome to GIFSA</h1>
+    <h2> welcome to Payfuture</h2>
+    <h3>Welcome to Office</h3>
+    <h4>Students </h4>
+    <h5>Employee</h5>
+    <h6>School names</h6>
+
+    <!--comments:
+    //<b></b> :bold
+    //<i></i> :italic
+    //<sup></sup>:10%2
+    //<sub></sub>
+
+
+
+
+-->
+
     
+
+    <p> <b>Lorem ipsum dolor sit amet</b> consectetur adipisicing elit. <i> Ipsam veritatis soluta, tempore cum quas pariatur</i>  repudiandae eaque iure quibusdam! Delectus qui eum cupiditate saepe, magnam ut doloribus. Ipsum, fugit expedita.
+
+
+        <p>Lorem ipsum <small>dolor sit amet consectetur adipisicing elit. Optio, ullam similique sequi vitae </small> perferendis neque quaerat numquam nostrum dolorem blanditiis officiis vero labore nesciunt officia, odio veritatis. Delectus, provident corrupti?</p>
+
+        <p>  <sup>10 </sup>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem deserunt vel porro, veritatis architecto recusandae sequi non asperiores ex tenetur nobis numquam dolores libero, suscipit, est adipisci temporibus at molestias.</p>
+
+    </p>
 </body>
 </html>
 
