Creation_of_List

--- a/List.html
+++ b/List.html
@@ -17,7 +17,7 @@
 -->
 <body>
     <h1> <b>Programming Languages </b> </h1>
-    <ol>
+    <ol type="1">
         <li>Java</li>
         <li>PHP</li>
         <li>C</li>
@@ -27,13 +27,17 @@
 
     <hr>
     <h1> Companies </h1>
-    <ul>
+    <ul >
         <li>IBM</li>
         <li>PayFuture</li>
         <li>Mphasis</li>
         <li>Infosys</li>
         <li>lnt</li>
     </ul>
-   
+   <hr>
+   <h2> setps to login in office </h2>
+   <li> Enter username</li>
+   <li>Enter Password</li>
+   <li>click on login button </li>
 </body>
 </html>
