--- a/Elements.html
+++ b/Elements.html
@@ -77,6 +77,9 @@ pre Tag  used to display text as it is (without ignoring Spaces & next line)
     
 <pre>
     cing elit. Consequatur,                                                                                           odio dolore a magni blanditiis est. Magnam doloribus autem, vitae atque vero facilis voluptate et dolores iure fugiat. Voluptatibus, sequi ipsa.Lorem ipsum, dolor sit amet consectetur adipisi
+
+<a href="https://www.google.com" target="main">Google</a>
+
 </p>
 </body>
 </html>
